<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="32dp"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/textview_name_reg"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_author_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:textColor="@color/black"
        android:id="@+id/edittext_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <TextView
        android:id="@+id/textview_surname_reg"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_author_surname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edittext_enter_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/textview_email_reg"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_author_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edittext_enter_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textview_pass_reg"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_author_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edittext_enter_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:id="@+id/button_reg"
        android:background="@color/primaryColorDark"
        android:layout_marginTop="64dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center"
        android:text="@string/button_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>